[gd_scene load_steps=5 format=3 uid="uid://d1b1a2c7mu5v7"]

[ext_resource type="Theme" uid="uid://ddlr8menttf7k" path="res://themes/tema.tres" id="1_ihk8h"]
[ext_resource type="Script" uid="uid://c6feh2p4hu48l" path="res://scenes/ui/panels/skills/SkillItem.gd" id="1_q231o"]
[ext_resource type="Texture2D" uid="uid://cpos6vhoqdaah" path="res://assets/icons/buttons/skills/formas.png" id="2_ihk8h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b0rnt"]
atlas = ExtResource("2_ihk8h")
region = Rect2(96, 0, 32, 32)

[node name="SkillItem" type="Button"]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2
size_flags_horizontal = 3
theme = ExtResource("1_ihk8h")
theme_type_variation = &"ButtonListOption"
toggle_mode = true
script = ExtResource("1_q231o")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="IconSkill" type="TextureRect" parent="MarginContainer/HBoxContainer/Control"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_b0rnt")
expand_mode = 1
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="NameSkill" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Bola de fuego"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 11
text = "Nivel"

[node name="LevelSkill" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_font_sizes/font_size = 11
text = "0"
